@startuml
class FileSearch {
    + vector<shared_ptr<File>> search(shared_ptr<File> root, FileSearchCriteria)
}
FileSearch --> FileSearchCriteria : evaluates
FileSearch --> File : traverses

enum AttributeType {
    NAME
    SIZE
    IS_DIRECTORY
}

class File {
    -string name
    - long long size
    - vector<shared_ptr<File>> children
    + addChild(shared_ptr<File> child)
    + extractAttribute(AttributeType) : <b>variant<...>
}
File  o-- File: 0..*

class FileSearchCriteria {
    - Predicate predicate
    + matches(shared_ptr<File>) : bool
}
FileSearchCriteria --> Predicate

abstract class Predicate {
    + isMatch() : bool
}

class SimplePredicate<T> {
    - AttributeType attribute
    - AttributeType target
    - ComparisonOperator operator
    + isMatch(file) : bool
}

abstract class ComparisonOperator<T> {
    + isMatch(T, T) : bool
}
SimplePredicate --* ComparisonOperator : uses
SimplePredicate --> AttributeType

abstract class CompositePredicate {
}

class AndPredicate {
    - vector<shared_ptr<Predicate>> predicates
    + isMatch() : bool
}
class OrPredicate {
    - vector<shared_ptr<Predicate>> predicates
    + isMatch() : bool
}
class NotPredicate {
    - shared_ptr<Predicate> predicate
    + isMatch() : bool
}
AndPredicate ..|> CompositePredicate : implements
OrPredicate ..|> CompositePredicate : implements
NotPredicate ..|> CompositePredicate : implements

SimplePredicate ..-|> Predicate : implements
CompositePredicate ..-|> Predicate : extends

@enduml